k8s/cicd-ofs/nexus/test-nexus.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nexus3
  namespace: cicd
  labels:
    app: nexus3
  annotations:
    deployment.kubernetes.io/revision: '3'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"24","kubesphere.io/creator":"admin"},"creationTimestamp":"2022-07-07T16:08:14Z","generation":61,"labels":{"app":"nexus3"},"name":"nexus3","namespace":"cicd","resourceVersion":"90565637","selfLink":"/apis/apps/v1/namespaces/cicd/deployments/nexus3","uid":"8218ab0f-92ff-4469-861f-9c6e0d74213d"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"ma [...]
      \"nexus3-578668f68f\" has successfully
      progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2022-11-14T01:58:00Z","lastUpdateTime":"2022-11-14T01:58:00Z","message":"Deployment
      has minimum
      availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":61,"readyReplicas":1,"replicas":1,"updatedReplicas":1}}
    kubesphere.io/creator: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus3
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nexus3
        pod-template-hash: 846c84c455
      annotations:
        kubesphere.io/restartedAt: '2023-03-08T17:07:00.960Z'
        logging.kubesphere.io/logsidecar-config: '{}'
    spec:
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-test-pvc
      containers:
        - name: nexus3
          image: 'sonatype/nexus3:3.37.3'
          ports:
            - name: web
              containerPort: 8081
              protocol: TCP
            - name: http-5000
              containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: '4'
              memory: 8048Mi
            requests:
              cpu: '4'
              memory: 8048Mi
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          livenessProbe:
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 1000
            timeoutSeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 6
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            runAsUser: 0
            runAsNonRoot: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      #nodeSelector:
        #cicd: ''
      securityContext: {}
      schedulerName: default-scheduler
      #tolerations:
       # - key: cicd
         # operator: Equal
         # effect: NoSchedule
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
