k8s/cicd-ofs/nexus/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubesphere.io/alias-name: repo-ofs.kyligence.com
    kubesphere.io/creator: tao.xing
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  generation: 20
  name: nexus-ingress
  namespace: cicd
spec:
  rules:
  - host: repo-ofs.kyligence.com
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 5000
        path: /v2/
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nexus
            port:
              number: 5002
        path: /v3/
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nexus
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - repo-ofs.kyligence.com
    secretName: repo
status:
  loadBalancer:
    ingress:
    - ip: 10.101.71.157
